--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="http://ps7akxker.bkt.clouddn.com/vue.css">
+  <link rel="stylesheet" href="https://cyc-1256109796.cos.ap-guangzhou.myqcloud.com/vue.css">
       <!-- 将自定义样式放在 Github 上会导致加载速度变得非常慢，所以采取直接内嵌的方式 -->
       <style type="text/css">
         /* 隐藏头部的目录 */
@@ -390,8 +390,7 @@
             noData: '😞 No Results! ',
             depth: 6
         },
-        // subMaxLevel: 2,
-        coverpage: true
+        subMaxLevel: 2,
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
@@ -399,5 +398,6 @@
   <script src="//unpkg.com/prismjs/components/prism-java.js"></script>
   <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
   <script src="https://cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
+  <script src="https://cyc-1256109796.cos.ap-guangzhou.myqcloud.com/zoom-image.min.js"></script>
 </body>
 </html>
