修改笔记内容

--- a/index.html
+++ b/index.html
@@ -379,11 +379,10 @@
   <div id="app">Loading...</div>
   <script>
     window.$docsify = {
-        loadSidebar: true,
+        loadSidebar: false,
         maxAge: 100,
         name: 'Sanarous',
         coverpage: true,
-        repo: 'https://github.com/Sanarous',
         search: {
             paths: 'auto',
             placeholder: '🔍 Type to search ',
