--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         .search input {
             background-color: rgba(243, 242, 238, 1) !important;
         }
+
+        .content{
+            font-color: #000;
+            letter-spacing: 2px;
+        }
     
         @media (min-width:600px) {
             .sidebar-toggle {
