--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
         maxAge: 100,
         name: 'Sanarous',
         coverpage: true,
+        repo: 'https://github.com/Sanarous/Sanarous.github.io',
         search: {
             paths: 'auto',
             placeholder: '🔍 搜索 ',
