--- a/index.html
+++ b/index.html
@@ -372,6 +372,41 @@
             pre .line-highlight {
                 margin-top: 0;
             }
+
+        ::-webkit-scrollbar {
+            width: 10px;
+            height: 10px;
+        }
+        ::-webkit-scrollbar-button {
+            width: 0;
+            height: 0;
+        }
+        ::-webkit-scrollbar-button:start:increment,::-webkit-scrollbar-button:end:decrement {
+            display: none;
+        }
+        ::-webkit-scrollbar-corner {
+            display: block;
+        }
+        ::-webkit-scrollbar-thumb {
+            border-radius: 8px;
+            background-color: rgba(0,0,0,.2);
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            border-radius: 8px;
+            background-color: rgba(0,0,0,.5);
+        }
+        ::-webkit-scrollbar-track,::-webkit-scrollbar-thumb {
+            border-right: 1px solid transparent;
+            border-left: 1px solid transparent;
+        }
+        ::-webkit-scrollbar-track:hover {
+            background-color: rgba(0,0,0,.15);
+        }
+        ::-webkit-scrollbar-button:start {
+            width: 10px;
+            height: 10px;
+            /*background: url(../images/scrollbar_arrow.png) no-repeat 0 0;*/
+        }
             </style>
 </head>
 <body>
