--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         h1+ul {
             display: block !important;
         }
+
+        .markdown-section{
+            width: 1000px;
+        }
     
         .markdown-section h1 {
             margin: 3rem 0 2rem 0;
@@ -124,7 +128,7 @@
                 padding-right: 0px !important;
             }
     
-            .docsify-copy-code-button {
+        .docsify-copy-code-button {
                 display: none;
             }
         }
@@ -407,7 +411,7 @@
             height: 10px;
             /*background: url(../images/scrollbar_arrow.png) no-repeat 0 0;*/
         }
-            </style>
+     </style>
 </head>
 <body>
   <div id="app">Loading...</div>
