--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
                 padding-left: 20px !important;
             }
         }
+
+        @media(max-width: 787px){
+            .content{
+                letter-spacing: 0px !important;
+            }
+
+            .github-corner svg{
+                display: none !important;
+            }
+        }
     
         @media (max-width:600px) {
             pre {
