--- a/index.html
+++ b/index.html
@@ -450,13 +450,8 @@
             depth: 6
         },
         subMaxLevel: 2,
+        disqus: 'shortname'
     };
-
-    new Valine({
-        el: '#vcomments',
-        appId: '0nUaNADpXEa2Tu2Gcah0T5X2-gzGzoHsz',
-        appKey: 'nL9SO3dSbS7dey2x7kQ3kf58'
-    })
 </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
 <script src="https://cyc-1256109796.cos.ap-guangzhou.myqcloud.com/docsify-copy-code.min.js"></script>
@@ -467,5 +462,6 @@
 <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
 <script src="https://cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
 <script src="https://cyc-1256109796.cos.ap-guangzhou.myqcloud.com/zoom-image.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/disqus.min.js"></script>
 </body>
 </html>
