--- a/index.html
+++ b/index.html
@@ -450,7 +450,6 @@
             depth: 6
         },
         subMaxLevel: 2,
-        disqus: 'shortname'
     };
 </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
@@ -462,10 +461,10 @@
 <script src="//unpkg.com/docsify-edit-on-github/index.js"></script>
 <script src="https://cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
 <script src="https://cyc-1256109796.cos.ap-guangzhou.myqcloud.com/zoom-image.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/disqus.min.js"></script>
 <script src="https://unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/gitalk.min.js"></script>
 <script src="//unpkg.com/gitalk/dist/gitalk.min.js"></script>
+<script src='//unpkg.com/valine/dist/Valine.min.js'></script>
 <script>
     const gitalk = new Gitalk({
         clientID: 'd8da74925ced88410258',
@@ -474,6 +473,12 @@
         owner: 'Sanarous',
         admin: ['Sanarous'],
         distractionFreeMode: false
+    });
+
+    new Valine({
+        el: '#vcomments',
+        appId: 'Your appId',
+        appKey: 'Your appKey'
     })
 </script>
 </body>
