修改部分问题

--- a/index.html
+++ b/index.html
@@ -433,6 +433,10 @@
             height: 10px;
             /*background: url(../images/scrollbar_arrow.png) no-repeat 0 0;*/
         }
+
+        footer{
+            display: none !important;
+        }
     </style>
 </head>
 <body>
