--- a/index.html
+++ b/index.html
@@ -444,13 +444,13 @@
 <script>
     window.$docsify = {
         maxAge: 100,
-        name: 'Sanarous',
+        name: 'ChenYiLin00',
         coverpage: true,
-        repo: 'https://github.com/Sanarous/Sanarous.github.io',
+        repo: 'https://github.com/ChenYiLin00/ChenYiLin00.github.io',
         search: {
             paths: 'auto',
             placeholder: '🔍 搜索 ',
-            noData: '😞 找不到相关内容呢！',
+            noData: '找不到相关内容呢！',
             depth: 6
         },
         subMaxLevel: 2,
@@ -472,9 +472,9 @@
     const gitalk = new Gitalk({
         clientID: 'd8da74925ced88410258',
         clientSecret: '30ce09b50c00cb546b24afcb87cd0cc40e749ef9',
-        repo: 'Sanarous.github.io',
-        owner: 'Sanarous',
-        admin: ['Sanarous'],
+        repo: 'ChenYiLin00.github.io',
+        owner: 'ChenYiLin00',
+        admin: ['ChenYiLin00'],
         id: location.pathname,
         distractionFreeMode: false
     });
